# pend

./: .gitignore  Cargo.toml  LICENSE-MIT  readme.md
docs/: index.html  pend.js  sw.js
src/: app.rs  backend.rs  lib.rs  main.rs  ui.rs
src/panels/: config.rs  info.rs  mod.rs  notes.rs  reader.rs  shelf.rs
