[package]
name = "pend"
version = "1.0.0"
edition = "2021"
authors = ["Alt0173 <four@aaathats3as.com>"]
license = "MIT OR Apache-2.0"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0"
egui = {version = "0.17.0", features = ["serialize"]}
egui_extras = { version = "0.17.0", features = ["image"]} # Nicer image handling
image = { version = "0.24.1", features = ["jpeg"]} # Loading images
glob = "0.3.0" # Search for files
epub = "1.2.3" # Deal with epubs
regex = "1.5.4" # Parsing of HTML from epubs
serde = { version = "1.0.136", features = ["derive"] }

[features]
default = ["eframe/persistence"]